--- a/app.json
+++ b/app.json
@@ -18,8 +18,12 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#ffffff",
+        "permissions": [
+          "READ_EXTERNAL_STORAGE"
+        ]
+      },
+      "package": "com.lulita_m.escola"
     },
     "web": {
       "favicon": "./assets/favicon.png"
