--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
+    "expo-image-picker": "~16.0.6",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
